--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        applicationId "com.example.secondactivity"
+        applicationId "com.example.home"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
